--- a/css/style.css
+++ b/css/style.css
@@ -988,6 +988,83 @@ ABOUT US PAGE
     height: 60px;
     padding-bottom: 10px;
 }
+/*
+NEWS PAGE
+*/
+
+#newsHome_section{
+    height: 100%;
+    min-height: 72vh;
+    background-color: #fcd3ab;
+    overflow: hidden;
+    position: relative;
+}
+.newsHead{
+    color: black;
+    padding: 32vh 50px 10px 50px;
+}
+.newsHead h2{
+    color: black;
+}
+.news{
+    background-color: #fcd3ab;
+}
+.newsContent{
+    padding: 70px 20px;
+}
+.newsContent h5{
+    font-weight: lighter;
+}
+.newschat{
+    top: 62vh;
+}
+.profileImg{
+    height: 200px;
+    padding: 10px;
+}
+.profile{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 0;
+}
+.profile h3{
+    font-size: 1.5em;
+    padding: 10px;
+    width: 100%;
+}
+.profile a img{
+    height: 30px;
+    padding: 5px;
+}
+.profile a{
+    width: 100%;
+}
+.blogContent p{
+    font-weight: lighter;
+    padding: 10px 0;
+}
+.blogContent h4{
+    font-weight: normal;
+    font-size: 1.1em;
+}
+.blogContent h3{
+    font-size: 1.2em;
+}
+.blogContent{
+    /* margin: auto; */
+    /* width: 70%; */
+}
+.tutorials{
+    background-color: #fcd3ab;
+    padding-bottom: 50px;
+}
+.tutorials h2, .tutorials p, .tutorials h5{
+    padding: 20px;
+}
+.tutorials h2{
+    font-size: 1.5em;
+    width: 80%;
+}
 
 
 
@@ -1146,6 +1223,10 @@ MEDIA QUERIES
     .SDeasy h2 {
         font-size: 1.5em;
         line-height: 1.3em;
+    }
+    .newsContent h5 {
+        font-size: 1.3em;
+        padding: 0 20px;
     }
 } 
 
@@ -1403,6 +1484,21 @@ MEDIA QUERIES
         padding-top: 120px;
     }
 
+    /*
+    NEWS PAGE
+    */
+    .blogPosts{
+        display: flex;
+        padding-top: 50px;
+    }
+    .profile{
+        padding: 0;
+        flex-direction: column;
+    }
+    .blogContent{
+        padding: 10px 70px 50px;
+    }
+
 
 }
 @media screen and (min-width: 960px){
@@ -1471,7 +1567,6 @@ MEDIA QUERIES
         background-repeat: no-repeat;
         background-position: -138px 448px;
         background-size: 800px;
-        /* background-attachment: fixed; */
         transition: background-size .25s ease-in;
     }
     #services_section h2 {
@@ -1483,10 +1578,8 @@ MEDIA QUERIES
         padding: 0;
     }
     .servicesList{
-        /* padding: 0; */
         justify-content: flex-end;
         order: 3;
-        /* padding-left: 50px; */
         padding: 20px;
     }
     .subSection p {
@@ -1503,9 +1596,6 @@ MEDIA QUERIES
         display: block;
     }
     .chatbubble {
-        /* position: fixed;
-        right: 30px;
-        top: 82vh; */
         height: 80px;
         display: block;
     }
@@ -1550,7 +1640,6 @@ MEDIA QUERIES
     .sdIconsHome{
         justify-content: space-between;
         padding: 40px;
-        /* padding: 40px 20px 40px 100px; */
     }
     .sdIconsHome img{
         height: 130px;
@@ -1694,7 +1783,20 @@ MEDIA QUERIES
         margin-bottom: -20px;
         transform: scaleX(-1);
     }
-
+    /*
+    NEWS PAGE
+    */
+    .blogContent{
+        max-width: 600px;
+        font-size: 1.1em;
+    }
+    .blogPosts {
+        justify-content: center;
+    }
+    .newsContent h5{
+        font-size: 2em;
+        padding: 0 50px;
+    }
 }
 
 @media screen and (min-width: 1130px){
@@ -1757,7 +1859,6 @@ MEDIA QUERIES
     }
     #overview_section h2 {
         font-size: 6em;
-        /* padding: 120px 160px 0 40px; */
         width: 1000px;
         align-self: center;
     }
@@ -1840,9 +1941,6 @@ MEDIA QUERIES
     .TFMlogo_heading {
         margin-top: 3vh;
     }
-    /* #heading_bottom p {
-        top: 86vh;
-    } */
     .chattext{
         display: block;
     }
@@ -1862,9 +1960,6 @@ MEDIA QUERIES
 }
 
 @media screen and (min-height: 800px){
-    /* .chattext{
-        top: 74vh;
-    } */
     .main_heading{
         transition: margin-top .25s ease-in; 
         padding-top: 25vh;
@@ -1886,7 +1981,6 @@ MEDIA QUERIES
     }
 }
 
-
 @media screen and (max-width: 700px) and (max-height: 700px){
     .main_heading h1{
         font-size: 3em;
@@ -1895,47 +1989,3 @@ MEDIA QUERIES
     }
 }
 
-
-/* @media screen and (max-height: 650px){
-    
-    #chatbubble{
-        height: 60px;
-    }
-    #heading_bottom p{
-        top: 88vh;
-    }
-    #main_heading{
-        padding-bottom: 0vh;
-    }
-} */
-
-/* @media screen and (max-height: 700px){
-    #TFMLogo{
-        margin-left: 30px;
-        margin-top: 0vh;
-        /* height: 50px; */
-      /*  transition: height .25s ease-in;
-    }
-   /* #main_heading{
-        padding-bottom: 0vh;
-    }
-} */
-
-/* @media screen and (max-width: 1130px){
-    #services_section{
-        font-size: 0.8em;
-        transition: font-size .20s ease-in;
-    }
-    #subSection_par{
-        width: 450px;
-        transition: width .20s ease-in;
-    }
-}
-@media screen and (max-width: 690px) and (min-width: 500px){
-    #services_section h2{
-        font-size: 5em;
-    }
-    #subSection_par {
-        margin-left: 20px;
-    }
-} */
